# stm32f103-usb-keyboard

./: .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  STM32F103x6.cmake  f103-usb.ioc  f103-usb.xml  find_docblocks.php
Drivers/STM32F1xx_HAL_Driver/Inc/: stm32f1xx_hal.h  stm32f1xx_hal_cortex.h  stm32f1xx_hal_dma.h  stm32f1xx_hal_flash.h  stm32f1xx_hal_flash_ex.h  stm32f1xx_hal_gpio.h  stm32f1xx_hal_gpio_ex.h  stm32f1xx_hal_pcd.h  stm32f1xx_hal_pcd_ex.h  stm32f1xx_hal_pwr.h  stm32f1xx_hal_rcc.h  stm32f1xx_hal_rcc_ex.h  stm32f1xx_hal_rtc.h  stm32f1xx_hal_rtc_ex.h  stm32f1xx_hal_tim.h  stm32f1xx_hal_tim_ex.h  stm32f1xx_ll_usb.h
Drivers/STM32F1xx_HAL_Driver/Src/: stm32f1xx_hal_rtc.c  stm32f1xx_ll_usb.c
Inc/: circbuf.h  keyboard.h  main.h  mxconstants.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h
Middlewares/ST/STM32_USB_Device_Library/Class/HID/Inc/: usbd_hid.h
Middlewares/ST/STM32_USB_Device_Library/Class/HID/Src/: usbd_hid.c
Middlewares/ST/STM32_USB_Device_Library/Core/Inc/: usbd_core.h  usbd_ctlreq.h  usbd_def.h  usbd_ioreq.h
Src/: circbuf.c  gpio.c  keyboard.c  main.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c  syscalls.c  usart.c  usb_device.c  usbd_conf.c  usbd_desc.c
